<resources>
    <string name="app_name">GymApp</string>

    <!--    Activities name-->
    <string name="intro_activity">Intro Activity</string>
    <string name="signup_activity">Sign Up</string>
    <string name="login_activity">Login</string>
    <string name="allCourses_activity">All Courses</string>
    <string name="course_activity">Course</string>
    <string name="myCourses_activity">My Courses</string>
    <string name="profile_activity">Profile</string>
    <string name="dashboard_activity">Dashboard</string>


    <string name="welcome">Welcome</string>
    <string name="dummyHeight">Height: 180 CM</string>
    <string name="dummy_weight">Weight: 75 KG</string>

    <string name="appTitle">Gym App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="signUp">SignUp</string>
    <string name="fullName">Full name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_btn">Confirm</string>
    <string name="email">Email</string>
    <string name="dashboard">Dashboard</string>
    <string name="courses">Courses</string>
    <string name="course">Course</string>
    <string name="myCourses">My Courses</string>
    <string name="menu">Menu</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="addYourReview">Add your review ...</string>
    <string name="addReview">Add  Review</string>
    <string name="about">About</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="version">Version 1.0</string>
    <string name="copyright">Faez Tgh All Right Reserved</string>
    <string name="dummyText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="loremipsom">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>


    <string name="inappropriateInput">Inappropriate input!</string>
    <string name="itemRemoved">Item Removed</string>
    <string name="itemPayedSuccessfully">Item Payed Successfully!</string>
    <string name="optionNotImplYet">this option is not implemented yet!</string>
    <string name="emptyUsernameField">UserName field is EMPTY!</string>
    <string name="emptyPasswordField">Password field is EMPTY!</string>
    <string name="userNotExist">User not exist in DB!</string>
    <string name="userExist">User exist!</string>
    <string name="networkConnectionError">Network Connection Error!</string>
    <string name="networkJsonError">Cannot convert data to json</string>
    <string name="networkGeneralError">Network Error!</string>
    <string name="fill">Fill!</string>
    <string name="cantLogout">Can\'t log out, Please try again</string>
    <string name="itemCheckedSuccessfully">Item Checked Successfully!</string>
    <string name="filePathNotSet">File Path Not Set!</string>
    <string name="filePathNotFound">File Path Not Found!</string>
    <string name="youAreNotPermittedToReadThisFile">You Not Permitted To Read This File!</string>
    <string name="exportingFileDoneSuccessfully">Exporting File Done Successfully!</string>
    <string name="importingFileDoneSuccessfully">Importing File Done Successfully!</string>
    <string name="externalStorageNotReadyToUse">External Storage Not Ready To Use!</string>
    <string name="courseReservationAddedSuccessfully">Course Reservation added successfully</string>
    <string name="sthWentWrongOnAddingCourseReservation">Something wrong on adding course reservation</string>
    <string name="fileNotExist">File Not Exist!</string>
    <string name="problemToReadFromFile">Problem To Read From File!</string>
    <string name="problemToWriteOnFile">Problem To Write On File!</string>
    <string name="errorMessageNotExist">Error Message Not Exist!</string>
    <string name="chooseLocation">Please choose your location</string>
    <string name="passwordLengthError">Password length must be 6 or more</string>

    <string name="successfulRegister">You Signed up Successfully!</string>
    <string name="cantGetUsersFromDb">Can\'t read users from Db!</string>
    <string name="cantSignUpError">Can\'t sign up, please try again!</string>
    <string name="cantSignInError">Can\'t sign in, please try again!</string>
    <string name="somethingWentWrong">Something went wrong :(</string>
    <string name="somethingWentWrongOnInsert">Something went wrong on insert :(</string>
    <string name="somethingWentWrongOnUpdate">Something went wrong on update:(</string>
    <string name="somethingWentWrongOnDelete">Something went wrong on delete :(</string>
    <string name="somethingWentWrongOnCheckUser">Something went wrong on Check for user existence:(</string>
    <string name="wrongUserNameOrPassword">Wrong username or password!</string>
    <string name="cannotGetUserFromDb"> Cannot get user from DB!</string>
    <string name="cannotGetCoursesFromDb"> Cannot get courses from DB!</string>
</resources>