<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bone_bg"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="30dp"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/bone_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="30dp"

            >


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/baseline_person_pin_black_24dp" />


            <EditText
                android:id="@+id/fullname_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/outline_input_curved"
                android:gravity="start"
                android:hint="@string/fullName"
                android:inputType="text"
                android:paddingLeft="30dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"

                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/outline_input_curved"
                android:gravity="start"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingLeft="30dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"

                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/username_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/outline_input_curved"
                android:gravity="start"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingLeft="30dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"

                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/outline_input_curved"
                android:gravity="start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="30dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/password_rep_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/outline_input_curved"
                android:gravity="start"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="30dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/mineshaft_curve_btn"
                android:elevation="15dp"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="20sp"

                />


        </LinearLayout>
    </ScrollView>


</LinearLayout>