<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bone_bg"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="30dp"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/bone_bg"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/baseline_person_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="50sp" />

            <EditText
                android:id="@+id/username_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/outline_input_curved"
                android:gravity="start"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/outline_input_curved"
                android:gravity="start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="15sp"

                />


            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/mineshaft_curve_btn"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp"

                />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/ash_curve_btn"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/signUp"
                android:textColor="@color/mineShaft"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/forgot_password_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@color/bone_bg"
                android:gravity="center"
                android:text="@string/forgotPassword"
                android:textColor="@color/navyBlue"
                android:textSize="20sp"

                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>