<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dashboard_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mineShaft"
        android:orientation="vertical">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                >


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@drawable/dash_linear_bg"
                    android:padding="20dp"

                    >

                    <ImageView
                        android:id="@+id/user_avatar_iv"
                        android:layout_width="92dp"
                        android:layout_height="92dp"
                        android:layout_alignParentRight="true"

                        android:src="@drawable/avatar" />

                    <TextView
                        android:id="@+id/dashboard_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/dashboard"
                        android:textColor="@color/mineShaft"
                        android:textSize="32sp" />


                    <TextView
                        android:id="@+id/dashboard_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/dashboard_title"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@id/dashboard_welcome"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/dashboard_welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/dashboard_title"
                        android:layout_marginTop="10dp"
                        android:text="@string/welcome"
                        android:textColor="@color/mineShaft"
                        android:textSize="24sp" />


                </RelativeLayout>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-80dp"
                    android:columnCount="2"
                    android:columnOrderPreserved="false"
                    android:rowCount="3">

                    <!--First Row-->
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:background="@drawable/outline_input_curved"
                        android:backgroundTint="@color/mineShaft"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="60dp">

                        <ImageView
                            android:id="@+id/all_courses_iv"
                            android:layout_width="170dp"
                            android:layout_height="170dp"
                            android:alpha="0.5"
                            android:background="@drawable/all_courses"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/allCourses_activity"
                            android:textColor="@color/bone_bg"
                            android:textColorHighlight="@color/red"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:background="@drawable/outline_input_curved"
                        android:backgroundTint="@color/mineShaft"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="60dp">

                        <ImageView
                            android:id="@+id/my_courses_iv"
                            android:layout_width="170dp"
                            android:layout_height="170dp"
                            android:alpha="0.5"
                            android:background="@drawable/my_courses"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/myCourses_activity"
                            android:textColor="@color/bone_bg"
                            android:textColorHighlight="@color/red"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>
                    <!--End of the First Row-->

                    <!--Second Row-->
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:background="@drawable/outline_input_curved"
                        android:backgroundTint="@color/mineShaft"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="60dp">

                        <ImageView
                            android:id="@+id/profile_iv"
                            android:layout_width="170dp"
                            android:layout_height="170dp"
                            android:alpha="0.5"
                            android:background="@drawable/profile"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/profile_activity"
                            android:textColor="@color/bone_bg"
                            android:textColorHighlight="@color/red"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:background="@drawable/outline_input_curved"
                        android:backgroundTint="@color/mineShaft"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="60dp">

                        <ImageView
                            android:id="@+id/share_iv"
                            android:layout_width="170dp"
                            android:layout_height="170dp"
                            android:alpha="0.5"
                            android:background="@drawable/share"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/share"
                            android:textColor="@color/bone_bg"
                            android:textColorHighlight="@color/red"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>
                    <!--End Of Second Row-->

                    <!--Third Row-->
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:background="@drawable/outline_input_curved"
                        android:backgroundTint="@color/mineShaft"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="60dp">

                        <ImageView
                            android:id="@+id/wallet_iv"
                            android:layout_width="170dp"
                            android:layout_height="170dp"
                            android:alpha="0.5"
                            android:background="@drawable/wallet"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/wallet"
                            android:textColor="@color/bone_bg"
                            android:textColorHighlight="@color/red"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:background="@drawable/outline_input_curved"
                        android:backgroundTint="@color/mineShaft"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="60dp">

                        <ImageView
                            android:id="@+id/journals_iv"
                            android:layout_width="170dp"
                            android:layout_height="170dp"
                            android:alpha="0.5"
                            android:background="@drawable/journals"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/journals"
                            android:textColor="@color/bone_bg"
                            android:textColorHighlight="@color/red"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>
                    <!--End Of Third Row-->


                </GridLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/drawer_header"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:menu="@menu/drawer_menu">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/version_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/version"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@+id/copyright_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/copyright_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/copyright"
                android:textSize="10sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>